add patch handlers for artist
