# docs/swagger.yaml
@@ -6,13 +6,40 @@ definitions:
     type: object
   internal_rest_api_artist.GetArtistByIDOut:
     properties:
-      artist_id:
-        type: integer
       avatar_url:
         type: string
       bio:
         type: string
+      id:
+        type: integer
       name:
+        type: string
+    type: object
+  internal_rest_api_artist.PatchUpdateArtistIn:
+    properties:
+      artistID:
+        type: integer
+      bio:
+        type: string
+      name:
+        type: string
+    required:
+    - artistID
+    type: object
+  internal_rest_api_artist.PatchUpdateArtistOut:
+    properties:
+      avatar_url:
+        type: string
+      bio:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  internal_rest_api_artist.PatchUpdateAvatarOut:
+    properties:
+      avatar_url:
         type: string
     type: object
   internal_rest_api_artist.PostArtistIn:
@@ -26,12 +53,12 @@ definitions:
     type: object
   internal_rest_api_artist.PostArtistOut:
     properties:
-      artist_id:
-        type: integer
       avatar_url:
         type: string
       bio:
         type: string
+      id:
+        type: integer
       name:
         type: string
     type: object
@@ -236,6 +263,90 @@ paths:
           schema:
             $ref: '#/definitions/echo.HTTPError'
       summary: Получение данных артиста по его id.
+      tags:
+      - artist
+    patch:
+      consumes:
+      - application/json
+      description: Обновляет name, bio артиста по его id. Достаточно передать только
+        нужные поля.
+      parameters:
+      - description: Параметры обновления профиля артиста
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_rest_api_artist.PatchUpdateArtistIn'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Профиль артиста обновлен
+          schema:
+            $ref: '#/definitions/internal_rest_api_artist.PatchUpdateArtistOut'
+        "400":
+          description: Некорректный запрос
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "401":
+          description: Пользователь не аутентифицирован
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Артист не найден
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "409":
+          description: Артист с таким именем уже существует
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Частичное обновление профиля артиста
+      tags:
+      - artist
+  /v1/artist/{id}/avatar:
+    patch:
+      consumes:
+      - multipart/form-data
+      description: Принимает avatar в multipart/form-data, валидирует изображение,
+        загружает в MinIO и обновляет ссылку на аватар артиста.
+      parameters:
+      - description: Файл аватарки (png/jpeg)
+        in: formData
+        name: avatar
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Аватар артиста обновлен
+          schema:
+            $ref: '#/definitions/internal_rest_api_artist.PatchUpdateAvatarOut'
+        "400":
+          description: Некорректный запрос
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "401":
+          description: Пользователь не аутентифицирован
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Артист не найден
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Обновление аватарки артиста
       tags:
       - artist
   /v1/auth/refresh:
@@ -454,7 +565,7 @@ paths:
       description: Принимает avatar в multipart/form-data, валидирует изображение,
         загружает в MinIO и обновляет ссылку на аватар текущего пользователя.
       parameters:
-      - description: Файл аватарки (png/jpeg/gif)
+      - description: Файл аватарки (png/jpeg)
         in: formData
         name: avatar
         required: true
